--- a/src/Profile/style.scss
+++ b/src/Profile/style.scss
@@ -3,67 +3,48 @@
 
 .profile {
   display: flex;
-  align-items: center;
-  margin: 0;
   background-color: $color-white;
-  padding: 20px;
-  border-radius: 5px;
+  flex-direction: column;
+  max-width: 800px;
+}
+
+.navbar {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  background-color: $color-blueLight;
   &__wrapper {
     display: flex;
-    flex-direction: column;
+  }
+  &__list {
+    list-style: none;
+    display: flex;
+  }
+  &__item {
+    margin: 0 5px;
+    height: 50px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    width: 150px;
+    display: flex;
     justify-content: center;
     align-items: center;
-    width: (calc(100% / 3));
-    padding: 20px;
-    border: 1px solid $color-grayLight;
-    border-radius: 5px;
+    background-color: $color-white;
   }
-  &__name {
-    text-transform: capitalize;
-    @include font-size(22px);
+  &__icon {
+    width: 20px;
+    height: 20px;
+  }
+  &__link {
+    text-decoration: none;
     color: $color-red;
-    text-align: center;
     font-weight: bold;
-    margin: 0 0 40px 0;
-  }
-  &__image {
-    width: 100%;
-  }
-
-  &__info {
-    display: flex;
-    padding: 50px;
-  }
-
-  &__description {
-    display: flex;
-    flex-direction: column;
-    list-style: none;
-  }
-
-  &__items {
-    margin: 10px 0;
-    &:last-child span {
-      display: flex;
-      width: fit-content;
-      flex-direction: column;
-      margin-bottom: 10px;
+    @include font-size(14px);
+    &:hover,
+    :focus {
+      text-decoration: underline;
     }
-  }
-
-  &__property {
-    background-color: $color-redLight;
-    padding: 7px 5px;
-    border-radius: 5px;
-    font-weight: bold;
-    display: inline-block;
-    width: 3rem;
-    text-align: center;
-    margin-right: 10px;
-  }
-
-  &__value {
-    margin-left: 10px;
-    @include font-size(12px);
   }
 }
